# gisp2-regelation

./: .gitignore  README.md  pyproject.toml
models/: compaction_pressure_model.py  enthalpy_model.py  image_segmentation.py  model_basal_temperature.py  model_film_thickness.py  model_regelation.py  model_surface_temperature.py  model_vein_flow.py  plot_isotopes.py
text/: airplane-derivation.odt  darcy-model-dev.txt.odt  discussion.txt.odt  introduction.odt
